--- a/short.tex
+++ b/short.tex
@@ -83,15 +83,13 @@
 \end{frame}
 
 \begin{frame}
-	\frametitle{Research Context}
-	\framesubtitle{The Databox Platform}
+	\frametitle{Implementation}
 	\centering
 	\includegraphics[width=\linewidth]{arch}\\
 \end{frame}
 
 \begin{frame}
 	\frametitle{Evaluation}
-	\framesubtitle{Platform}
 	\begin{itemize}
 		\item Scalability
 		\begin{itemize}
@@ -113,8 +111,8 @@
 \end{frame}
 
 \begin{frame}
-	\frametitle{The Serverless Paradigm}
-	\framesubtitle{Background}
+	\frametitle{Research Context}
+	\framesubtitle{The Serverless Paradigm}
 
 	\begin{figure}
 		\centering
@@ -124,8 +122,8 @@
 \end{frame}
 
 \begin{frame}
-	\frametitle{Low-latency Serverless}
-	\framesubtitle{Approach}
+	\frametitle{Implementation}
+	\framesubtitle{Low-latency Serverless}
 
 	\begin{figure}[h]
 		\centering
@@ -135,8 +133,8 @@
 \end{frame}
 
 \begin{frame}
-	\frametitle{Low-latency Serverless}
-	\framesubtitle{Approach}
+	\frametitle{Implementation}
+	\framesubtitle{Low-latency Serverless}
 
 	\begin{figure}[h]
 		\centering
@@ -146,36 +144,13 @@
 \end{frame}
 
 \begin{frame}
-	\frametitle{Low-latency Serverless}
-	\framesubtitle{Approach}
+	\frametitle{Implementation}
+	\framesubtitle{Low-latency Serverless}
 
 	\begin{figure}[h]
 		\centering
 		\includegraphics[width=0.6\textwidth]{service}
 		\caption{Producer-intrinsic Steps for Computing Partitioning Decisions from Stale Queue Lengths}
-	\end{figure}
-\end{frame}
-
-\begin{frame}
-	\frametitle{Low-latency Serverless}
-	\framesubtitle{Simulations}
-
-	\begin{figure}[h]
-		\centering
-		\includegraphics[width=0.5\textwidth]{diffservices-topology}
-		\caption{An Example of Simulation Topology}
-	\end{figure}
-\end{frame}
-
-\begin{frame}
-	\frametitle{Low-latency Serverless}
-	\framesubtitle{Simulations}
-
-	\begin{figure}[h]
-		\centering
-		\includegraphics[width=0.49\textwidth]{diffservices-lyapunov}
-		\includegraphics[width=0.49\textwidth]{diffservices-optimal}
-		\caption{Simulation Results with Different Partitioning Algorithms}
 	\end{figure}
 \end{frame}
 
